Added JPA Integration
